--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/compatible": "^5.1.4",
     "@ant-design/icons": "^6.0.0",
+    "@lottiefiles/dotlottie-react": "^0.15.1",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.12",
     "antd": "^5.27.1",
