--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "@tailwindcss/vite": "^4.1.12",
     "antd": "^5.27.1",
     "axios": "^1.11.0",
+    "i18next": "^25.4.2",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
+    "react-flag-icons": "^1.0.6",
+    "react-i18next": "^15.7.2",
     "react-icon": "^1.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.1",
